--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     
     function myButtonClicked(el){
     el.disabled = true; 
-    
+    console.log("uuuuuuu");
     }
 
     function combo(id){
