--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,12 @@
       
     }
 
+    function enableApprove(){
+
+      var btn = document.getElementById("approvebtn");
+        btn.disabled = false;
+    }
+
   </script>
 
 
